# kivinge

./: Cargo.toml  README.md
.github/workflows/: build.yml  ci.yml  release.yml
kivinge-macros/: Cargo.toml
kivinge-macros/src/: lib.rs
src/: cache.rs  error.rs  fuse.rs  kivra.rs  lib.rs  main.rs  table.rs  terminal.rs  util.rs
src/cli/: inbox.rs  inbox_item.rs  mod.rs
src/client/: kivra_client.rs  mock_client.rs  mod.rs  session.rs  session_manager.rs
src/client/test_data/: auth_response.json  auth_status.json  auth_token_response.json  config.json  details.json  inbox.json  private_key.pem  public_key.pem
src/kivra/: client.rs  error.rs  mod.rs  model.rs  qr.rs  request.rs  session.rs
src/kivra/client/: kivra_client.rs  mock_client.rs
src/model/: auth.rs  content.rs  mod.rs
src/tui/: content.rs  inbox.rs  inbox_item.rs  keymap.rs  login.rs  mod.rs  qr.rs  terminal.rs
src/view/: login.rs
