[package]
name = "kivinge"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
strip = true

[lib]
name = "kivinge"

[dependencies]
base64 = { version = "0.22.1", default-features = false }
clap = { version = "4.5.15", features = ["cargo", "derive"] }
clap_complete = "4.5.16"
crossterm = { version = "0.27.0", default-features = false }
dirs = "5.0.1"
pkce = "0.2.0"
qrcode = { version = "0.14.0", default-features = false }
rand = { version = "0.8.5", default-features = false }
ratatui = { version = "0.26.2", features = ["crossterm"], default-features = false }
reqwest = { version = "0.12.4", features = ["blocking", "gzip", "http2", "json", "rustls-tls"], default-features = false }
rust_decimal = { version = "1.35.0", features = ["serde"], default-features = false }
serde = { version = "1.0.202", features = ["serde_derive"], default-features = false }
serde_json = "1.0.117"
thiserror = "1.0.61"
time = { version = "0.3.36", features = ["macros", "parsing", "serde"], default-features = false }
