[package]
name = "kivractl"
version = "0.1.0"
edition = "2021"

[lib]
name = "kivractl"

[dependencies]
base64 = "0.22.1"
clap = "4.5.4"
qrcode = { version = "0.14.0", default-features = false }
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["blocking", "json", "gzip"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
sha256 = { version = "1.5.0", default-features = false }
thiserror = "1.0.61"
